--- a/laba3/laba3.csproj
+++ b/laba3/laba3.csproj
@@ -79,5 +79,10 @@
   <ItemGroup>
     <None Include="App.config" />
   </ItemGroup>
+  <ItemGroup>
+    <Folder Include="Lavreshin\" />
+    <Folder Include="Pokalo\" />
+    <Folder Include="Sodikov\" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
